--- a/src/changelogs/2023-08-27.md
+++ b/src/changelogs/2023-08-27.md
@@ -3,11 +3,15 @@ date: 2023-08-27
 ---
 
 ### 修复
+
 - 修复了当隐藏同步页面时 tab bar 的 active 状态错误
 
 ### 优化
+
 - 优化了订阅列表复制预览等按钮的操作逻辑
 
 ### 功能
+
+- 域名解析服务增加了 Ali 和 Tencent (要求: 后端 >= 2.14.33)
 - 新增了后端 API 管理页面，可以方便的在多个后端之间切换
 - 新增了在 url 查询参数传入 api 时可以自动将其加入后端 API 列表并切换至该 API
