--- a/src/changelogs/2024-04-18.md
+++ b/src/changelogs/2024-04-18.md
@@ -1,5 +1,5 @@
 ---
-date: 2024-04-18
+date: 2024-04-21
 ---
 
 ### 阶段性更新汇总
@@ -8,6 +8,12 @@ date: 2024-04-18
 
 Telegram 频道 https://t.me/cool_scripts 内有每次更新的详细说明
 
+- 支持 Loon SOCKS5/SOCKS5-TLS
+- 支持 WireGuard URI 输入和输出
+- 支持 dialer-proxy, detour
+- fancy-characters 增加 modifier-letter(小写没有 q, 用 ᵠ 替代. 大写缺的太多, 用小写替代)
+- 订阅支持输出哪吒探针兼容响应, 网络监控接口(Loon/Surge 可输出节点延迟)
+- 节点操作增加收起/展开按钮, 方便处理多个操作
 - 远程订阅 URL 新增参数 validCheck 将检查订阅有效期和剩余流量
 - 增加脚本说明文档链接
 - HTML 中增加 version meta
