feat: 节点操作支持单项展开/收起

--- a/src/changelogs/2024-04-22.md
+++ b/src/changelogs/2024-04-22.md
@@ -1,5 +1,5 @@
 ---
-date: 2024-04-21
+date: 2024-04-22
 ---
 
 ### 阶段性更新汇总
@@ -8,6 +8,8 @@ date: 2024-04-21
 
 Telegram 频道 https://t.me/cool_scripts 内有每次更新的详细说明
 
+- QX 输出正式支持 VLESS
+- 节点操作支持单项展开/收起
 - 支持 Loon SOCKS5/SOCKS5-TLS
 - 支持 WireGuard URI 输入和输出
 - 支持 dialer-proxy, detour
